<resources>
    <string name="CronetProviderClassName">com.google.android.gms.net.PlayServicesCronetProvider</string>
    <string name="_4k">4K</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="adjust_token">123456789</string>
    <string name="ads">REMOVE ADS</string>
    <string name="akm">AKM Sound</string>
    <string name="al_exo_controls_cc_disabled_description">Enable subtitles</string>
    <string name="al_exo_controls_cc_enabled_description">Disable subtitles</string>
    <string name="al_exo_controls_custom_playback_speed">%1$.2fx</string>
    <string name="al_exo_controls_fastforward_description">Fast forward</string>
    <string name="al_exo_controls_fullscreen_enter_description">Enter fullscreen</string>
    <string name="al_exo_controls_fullscreen_exit_description">Exit fullscreen</string>
    <string name="al_exo_controls_hide">Hide player controls</string>
    <string name="al_exo_controls_next_description">Next</string>
    <string name="al_exo_controls_overflow_hide_description">Hide additional settings</string>
    <string name="al_exo_controls_overflow_show_description">Show additional settings</string>
    <string name="al_exo_controls_pause_description">Pause</string>
    <string name="al_exo_controls_play_description">Play</string>
    <string name="al_exo_controls_playback_speed">Speed</string>
    <string name="al_exo_controls_playback_speed_normal">Normal</string>
    <string name="al_exo_controls_previous_description">Previous</string>
    <string name="al_exo_controls_repeat_all_description">Repeat all</string>
    <string name="al_exo_controls_repeat_off_description">Repeat none</string>
    <string name="al_exo_controls_repeat_one_description">Repeat one</string>
    <string name="al_exo_controls_rewind_description">Rewind</string>
    <string name="al_exo_controls_seek_bar_description">Playback progress</string>
    <string name="al_exo_controls_settings_description">Settings</string>
    <string name="al_exo_controls_show">Show player controls</string>
    <string name="al_exo_controls_shuffle_off_description">Shuffle off</string>
    <string name="al_exo_controls_shuffle_on_description">Shuffle on</string>
    <string name="al_exo_controls_stop_description">Stop</string>
    <string name="al_exo_controls_time_placeholder">00:00:00</string>
    <string name="al_exo_controls_vr_description">VR mode</string>
    <string name="al_exo_download_completed">Download completed</string>
    <string name="al_exo_download_description">Download</string>
    <string name="al_exo_download_downloading">Downloading</string>
    <string name="al_exo_download_failed">Download failed</string>
    <string name="al_exo_download_notification_channel_name">Downloads</string>
    <string name="al_exo_download_paused">Downloads paused</string>
    <string name="al_exo_download_paused_for_network">Downloads waiting for network</string>
    <string name="al_exo_download_paused_for_wifi">Downloads waiting for WiFi</string>
    <string name="al_exo_download_removing">Removing downloads</string>
    <string name="al_exo_item_list">%1$s, %2$s</string>
    <string name="al_exo_track_bitrate">%1$.2f Mbps</string>
    <string name="al_exo_track_mono">Mono</string>
    <string name="al_exo_track_resolution">%1$d × %2$d</string>
    <string name="al_exo_track_role_alternate">Alternate</string>
    <string name="al_exo_track_role_closed_captions">CC</string>
    <string name="al_exo_track_role_commentary">Commentary</string>
    <string name="al_exo_track_role_supplementary">Supplementary</string>
    <string name="al_exo_track_selection_auto">Auto</string>
    <string name="al_exo_track_selection_none">None</string>
    <string name="al_exo_track_selection_title_audio">Audio</string>
    <string name="al_exo_track_selection_title_text">Text</string>
    <string name="al_exo_track_selection_title_video">Video</string>
    <string name="al_exo_track_stereo">Stereo</string>
    <string name="al_exo_track_surround">Surround sound</string>
    <string name="al_exo_track_surround_5_point_1">5.1 surround sound</string>
    <string name="al_exo_track_surround_7_point_1">7.1 surround sound</string>
    <string name="al_exo_track_unknown">Unknown</string>
    <string name="amr">AMR Sound</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_id">ca-app-pub-9378724246417115~3444378456</string>
    <string name="app_name">Magic Wallpaper - Broken Screen</string>
    <string name="app_open_test">ca-app-pub-3940256099942544/9257395921</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="applovin_agree_message">Please press \"Continue\" if you choose to start using our app.</string>
    <string name="applovin_alt_privacy_policy_text" />
    <string name="applovin_continue_button_text">Continue</string>
    <string name="applovin_creative_debugger_disabled_text">Enable the Creative Debugger SDK settings in order to view recent ads.</string>
    <string name="applovin_creative_debugger_no_ads_text">No recently displayed ads found.</string>
    <string name="applovin_list_item_image_description">Displays more info about the list item.</string>
    <string name="applovin_pp_and_tos_title">To use %s you must agree to our Terms &amp; Conditions and affirm you have reviewed our Privacy Policy</string>
    <string name="applovin_pp_title">To use %s you must affirm that you have reviewed and acknowledged our Privacy Policy.</string>
    <string name="applovin_privacy_policy_text">Privacy Policy</string>
    <string name="applovin_terms_of_service_text">Terms &amp; Conditions</string>
    <string name="applovin_terms_of_use_text">Terms of Use</string>
    <string name="apply">Apply</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure want to exit?</string>
    <string name="art">Art</string>
    <string name="bonk">Bonk</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="broken">Broken</string>
    <string name="broken_screen">Broken Screen</string>
    <string name="bruh">Bruh</string>
    <string name="buy_now">Buy now</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="campaign.appName">getAppName</string>
    <string name="campaign.iconUrl">getIconUrl</string>
    <string name="campaign.imageUrl">getImageUrl</string>
    <string name="cancel">Cancel</string>
    <string name="change_language">Change language</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="close">CLOSE</string>
    <string name="com.google.firebase.crashlytics.mapping_file_id">00000000000000000000000000000000</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b>facebook.com/device&lt;/b> and enter the code shown above.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading…</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_continue">Continue with Facebook</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="des_turn_off_electric_1">If you want to remove the effect,</string>
    <string name="des_turn_off_electric_2">please return to broken app</string>
    <string name="exit_app_content">Are you sure you want to close this app</string>
    <string name="exit_app_title">Leave App?</string>
    <string name="home1">Home</string>
    <string name="how_to_turn_off">How to turn off ?</string>
    <string name="ok_i_got_it">OK, I got it</string>
    <string name="other_wallpaper">Other wallpaper</string>
    <string name="see_more">See more</string>
    <string name="set_wallpaper_successfully">Set wallpaper successfully</string>
    <string name="share">Share</string>
    <string name="text_continue">Continue</string>
    <string name="text_exit">Exit</string>
    <string name="text_no_internet_connection">No Internet Connection</string>
    <string name="text_no_internet_content">Need to connect to the internet in order to work .Please connect and try again</string>
    <string name="text_rate_content">"5 stars is the best we can get,
Support us to develop app better!"</string>
    <string name="text_rate_now">Rate Now</string>
    <string name="text_rate_us">Rate Us</string>
    <string name="text_retry">Retry</string>
</resources>