<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:tag="layout/dialog_exit_app_0" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:background="@drawable/bg_dialog" android:padding="@dimen/_12sdp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="60.0dip">
        <View android:id="@id/view_logo" android:layout_width="fill_parent" android:layout_height="80.0dip" />
        <TextView android:textSize="@dimen/_14ssp" android:textColor="@color/black" android:id="@id/tv_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/exit_app_title" android:layout_below="@id/view_logo" android:layout_centerHorizontal="true" android:fontFamily="@font/poppins_regular" style="@style/TextViewMedium" />
        <TextView android:textSize="@dimen/_12ssp" android:textColor="@color/black" android:gravity="center" android:id="@id/tv_content" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_8sdp" android:text="@string/exit_app_content" android:layout_below="@id/tv_title" android:layout_centerHorizontal="true" android:fontFamily="@font/poppins_regular" style="@style/TextViewRegular" />
        <FrameLayout android:id="@id/fr_native" android:tag="binding_1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_12sdp" android:layout_below="@id/tv_content">
            <include android:id="@id/shimmer_ads" layout="@layout/shimmer_native_medium" />
        </FrameLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="@dimen/_42sdp" android:layout_marginTop="@dimen/_12sdp" android:layout_below="@id/fr_native">
            <TextView android:textSize="@dimen/_12ssp" android:textColor="@color/black" android:gravity="center" android:id="@id/tv_exit" android:background="@drawable/bg_btn_cancel" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/text_exit" android:layout_weight="1.0" style="@style/TextViewRegular" />
            <TextView android:textSize="@dimen/_12ssp" android:textColor="@color/white" android:gravity="center" android:id="@id/tv_continue" android:background="@drawable/bg_button_1" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/text_continue" android:layout_weight="1.0" android:layout_marginStart="@dimen/_12sdp" style="@style/TextViewRegular" />
        </LinearLayout>
    </RelativeLayout>
    <androidx.appcompat.widget.AppCompatImageView android:layout_width="wrap_content" android:layout_height="120.0dip" android:src="@drawable/img_exit_app" android:layout_centerHorizontal="true" />
</RelativeLayout>
