<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:tag="layout/dialog_turn_off_electric_0" android:background="@drawable/bg_dialog" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.AppCompatImageView android:id="@id/iv_turn_off_electric" android:layout_width="fill_parent" android:layout_height="@dimen/_90sdp" android:layout_marginTop="@dimen/_25sdp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/ll_turn_off_electric" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_20sdp" android:layout_marginTop="@dimen/_15sdp" android:layout_marginRight="@dimen/_20sdp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/iv_turn_off_electric">
        <TextView android:textSize="@dimen/_13ssp" android:textColor="@color/black" android:layout_gravity="center" android:id="@id/tv_turn_off_electric" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_10sdp" android:text="@string/how_to_turn_off" android:fontFamily="@font/inter_bold" />
        <TextView android:textSize="@dimen/_12ssp" android:textColor="@color/black" android:gravity="center" android:layout_gravity="center" android:id="@id/tv_des_turn_off_electric_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_15sdp" android:text="@string/des_turn_off_electric_1" android:fontFamily="@font/inter_regular" />
        <TextView android:textSize="@dimen/_12ssp" android:textColor="@color/black" android:gravity="center" android:layout_gravity="center" android:id="@id/tv_des_turn_off_electric_2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/des_turn_off_electric_2" android:fontFamily="@font/inter_regular" />
    </LinearLayout>
    <TextView android:textSize="@dimen/_13ssp" android:textColor="@color/white" android:gravity="center" android:id="@id/tv_bt_ok" android:background="@drawable/bg_button_1" android:layout_width="fill_parent" android:layout_height="@dimen/_35sdp" android:layout_marginLeft="@dimen/_65sdp" android:layout_marginTop="@dimen/_20sdp" android:layout_marginRight="@dimen/_65sdp" android:layout_marginBottom="@dimen/_20sdp" android:text="@string/ok_i_got_it" android:fontFamily="@font/inter_regular" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/ll_turn_off_electric" />
</androidx.constraintlayout.widget.ConstraintLayout>
