<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:tag="layout/dialog_no_internet_0" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:background="@drawable/bg_dialog" android:padding="@dimen/_12sdp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="70.0dip">
        <View android:id="@id/view_logo" android:layout_width="fill_parent" android:layout_height="70.0dip" />
        <TextView android:textSize="@dimen/_14ssp" android:textColor="@color/black" android:id="@id/tv_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_no_internet_connection" android:layout_below="@id/view_logo" android:layout_centerHorizontal="true" style="@style/TextViewMedium" />
        <TextView android:textSize="@dimen/_12ssp" android:textColor="@color/black" android:gravity="center" android:id="@id/tv_content" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_8sdp" android:text="@string/text_no_internet_content" android:layout_below="@id/tv_title" android:layout_centerHorizontal="true" style="@style/TextViewRegular" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="@dimen/_36sdp" android:layout_marginTop="@dimen/_24sdp" android:layout_below="@id/tv_content">
            <TextView android:textSize="@dimen/_12ssp" android:textColor="@color/white" android:gravity="center" android:id="@id/tv_retry" android:background="@drawable/bg_button_1" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/text_retry" android:layout_weight="1.0" android:fontFamily="@font/inter_regular" />
        </LinearLayout>
    </RelativeLayout>
    <androidx.appcompat.widget.AppCompatImageView android:layout_width="wrap_content" android:layout_height="140.0dip" android:src="@drawable/img_no_internet" android:layout_centerHorizontal="true" />
</RelativeLayout>
