<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:tag="layout/dialog_rate_app_0" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <RelativeLayout android:background="@drawable/bg_dialog" android:padding="@dimen/_12sdp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="50.0dip">
            <View android:id="@id/view_logo" android:layout_width="fill_parent" android:layout_height="50.0dip" />
            <androidx.appcompat.widget.AppCompatImageView android:id="@id/iv_close" android:background="?android:selectableItemBackgroundBorderless" android:layout_width="@dimen/_24sdp" android:layout_height="@dimen/_24sdp" android:src="@drawable/ic_close" android:layout_alignParentEnd="true" />
            <TextView android:textSize="@dimen/_14ssp" android:textColor="@color/black" android:id="@id/tv_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_rate_us" android:layout_below="@id/view_logo" android:layout_centerHorizontal="true" style="@style/TextViewMedium" />
            <TextView android:textSize="@dimen/_12ssp" android:textColor="@color/black" android:gravity="center" android:id="@id/tv_content" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_8sdp" android:text="@string/text_rate_content" android:layout_below="@id/tv_title" android:layout_centerHorizontal="true" style="@style/TextViewRegular" />
            <com.willy.ratingbar.ScaleRatingBar android:id="@id/simpleRatingBar" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_12sdp" android:layout_below="@id/tv_content" app:srb_clickable="true" app:srb_drawableEmpty="@drawable/ic_star_empty" app:srb_drawableFilled="@drawable/ic_star_fill" app:srb_scrollable="true" app:srb_starHeight="@dimen/_24sdp" app:srb_starWidth="@dimen/_24sdp" app:srb_stepSize="1.0" />
            <TextView android:textSize="@dimen/_12ssp" android:textColor="@color/white" android:gravity="center" android:layout_gravity="center" android:id="@id/tv_rate_now" android:background="@drawable/bg_button_1" android:paddingLeft="@dimen/_32sdp" android:paddingRight="@dimen/_32sdp" android:layout_width="fill_parent" android:layout_height="@dimen/_42sdp" android:layout_marginTop="@dimen/_24sdp" android:text="@string/text_rate_now" android:layout_below="@id/simpleRatingBar" android:fontFamily="@font/poppins_regular" />
        </RelativeLayout>
        <androidx.appcompat.widget.AppCompatImageView android:id="@id/iv_start" android:layout_width="wrap_content" android:layout_height="100.0dip" android:src="@drawable/img_star_5" android:layout_centerHorizontal="true" />
    </RelativeLayout>
</LinearLayout>
