<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@id/main" android:tag="layout/activity_set_wallpaper_success_0" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="horizontal" android:id="@id/ll_toolbar" android:layout_width="fill_parent" android:layout_height="?android:actionBarSize" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
        <androidx.appcompat.widget.AppCompatImageView android:id="@id/iv_back" android:src="@drawable/ic_back" style="@style/IconToolbar" />
        <TextView android:textSize="@dimen/_14ssp" android:textColor="@color/black" android:layout_gravity="center_vertical" android:id="@id/tv_electric_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Successfully" android:fontFamily="@font/inter_regular" />
    </LinearLayout>
    <androidx.cardview.widget.CardView android:id="@id/cv_fluid_wallpaper_success" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginLeft="@dimen/_40sdp" android:layout_marginTop="@dimen/_20sdp" android:layout_marginRight="@dimen/_40sdp" app:cardCornerRadius="@dimen/_20sdp" app:layout_constraintBottom_toTopOf="@id/ll_botton" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/ll_toolbar">
        <ImageView android:id="@id/iv_wallpaper_success" android:layout_width="fill_parent" android:layout_height="fill_parent" android:scaleType="centerCrop" />
    </androidx.cardview.widget.CardView>
    <LinearLayout android:orientation="vertical" android:id="@id/ll_botton" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_25sdp" android:layout_marginTop="@dimen/_15sdp" android:layout_marginRight="@dimen/_25sdp" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/cv_fluid_wallpaper_success">
        <TextView android:textSize="@dimen/_12ssp" android:textColor="@color/black" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_15sdp" android:text="@string/set_wallpaper_successfully" android:maxLines="1" android:fontFamily="@font/inter_regular" />
        <FrameLayout android:orientation="vertical" android:id="@id/fr_native" android:tag="binding_1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_15sdp" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent">
            <include android:id="@id/shimmer_ads" layout="@layout/shimmer_native_medium" />
        </FrameLayout>
        <TextView android:textSize="@dimen/_12ssp" android:textColor="@color/white" android:gravity="center" android:layout_gravity="center" android:id="@id/tv_button_other_wallpaper" android:background="@drawable/bg_button_1" android:paddingLeft="@dimen/_10sdp" android:paddingRight="@dimen/_10sdp" android:layout_width="fill_parent" android:layout_height="@dimen/_35sdp" android:layout_marginTop="@dimen/_15sdp" android:text="@string/other_wallpaper" android:maxLines="1" android:fontFamily="@font/inter_regular" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_15sdp" android:layout_marginBottom="@dimen/_25sdp">
            <TextView android:textSize="@dimen/_12ssp" android:textColor="@color/white" android:gravity="center" android:layout_gravity="center" android:id="@id/tv_button_share" android:background="@drawable/bg_button_3" android:paddingLeft="@dimen/_5sdp" android:paddingRight="@dimen/_5sdp" android:layout_width="fill_parent" android:layout_height="@dimen/_35sdp" android:text="@string/share" android:maxLines="1" android:layout_weight="1.0" android:fontFamily="@font/inter_regular" />
            <View android:layout_width="@dimen/_15sdp" android:layout_height="0.0dip" />
            <TextView android:textSize="@dimen/_12ssp" android:textColor="@color/white" android:gravity="center" android:layout_gravity="center" android:id="@id/tv_button_home" android:background="@drawable/bg_button_3" android:paddingLeft="@dimen/_5sdp" android:paddingRight="@dimen/_5sdp" android:layout_width="fill_parent" android:layout_height="@dimen/_35sdp" android:text="@string/home1" android:maxLines="1" android:layout_weight="1.0" android:fontFamily="@font/inter_regular" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
