<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:tag="layout/fragment_wallpaper_0" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginStart="@dimen/_12sdp"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginBottom="@dimen/_15sdp">
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="horizontal" android:id="@id/ll_header_broken" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
                <TextView android:textSize="@dimen/_13ssp" android:textColor="@color/black" android:gravity="center" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/broken" android:fontFamily="@font/inter_bold" />
                <androidx.appcompat.widget.AppCompatImageView android:layout_gravity="center" android:id="@id/iv_home_broken" android:layout_width="@dimen/_13sdp" android:layout_height="@dimen/_13sdp" android:layout_marginStart="@dimen/_5sdp" />
                <View android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_weight="1.0" />
                <TextView android:textSize="@dimen/_11ssp" android:textColor="#ff0077ff" android:gravity="center" android:layout_gravity="center" android:id="@id/tv_see_more_broken" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/see_more" android:fontFamily="@font/inter_regular" android:layout_marginEnd="@dimen/_12sdp" />
            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView android:id="@id/rv_wallpaper_broken" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_7sdp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/ll_header_broken" />
            <LinearLayout android:orientation="horizontal" android:id="@id/ll_header_4k" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_12sdp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/rv_wallpaper_broken">
                <TextView android:textSize="@dimen/_13ssp" android:textColor="@color/black" android:gravity="center" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/_4k" android:fontFamily="@font/inter_bold" />
                <androidx.appcompat.widget.AppCompatImageView android:layout_gravity="center" android:id="@id/iv_home_4k" android:layout_width="@dimen/_13sdp" android:layout_height="@dimen/_13sdp" android:layout_marginStart="@dimen/_5sdp" />
                <View android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_weight="1.0" />
                <TextView android:textSize="@dimen/_11ssp" android:textColor="#ff0077ff" android:gravity="center" android:layout_gravity="center" android:id="@id/tv_see_more_4k" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/see_more" android:fontFamily="@font/inter_regular" android:layout_marginEnd="@dimen/_12sdp" />
            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView android:id="@id/rv_wallpaper_4k" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_5sdp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/ll_header_4k" />
            <LinearLayout android:orientation="horizontal" android:id="@id/ll_header_art" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_12sdp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/rv_wallpaper_4k">
                <TextView android:textSize="@dimen/_13ssp" android:textColor="@color/black" android:gravity="center" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/art" android:fontFamily="@font/inter_bold" />
                <androidx.appcompat.widget.AppCompatImageView android:layout_gravity="center" android:id="@id/iv_home_art" android:layout_width="@dimen/_13sdp" android:layout_height="@dimen/_13sdp" android:layout_marginStart="@dimen/_5sdp" />
                <View android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_weight="1.0" />
                <TextView android:textSize="@dimen/_11ssp" android:textColor="#ff0077ff" android:gravity="center" android:layout_gravity="center" android:id="@id/tv_see_more_art" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/see_more" android:fontFamily="@font/inter_regular" android:layout_marginEnd="@dimen/_12sdp" />
            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView android:id="@id/rv_wallpaper_art" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_5sdp" android:layout_marginBottom="@dimen/_20sdp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/ll_header_art" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
